DodgeDynasty/Content/Site.css
/* ... */
#teamDisplay .outline 
{
	display: block;
	float: left;
}

/* Draft Pick
----------------------------------------------------------*/
.pick-buttons
{
	margin-top: 9px;
	text-align: center;
}

#playerEntry form
{
	width: 220px;
	margin: 0 auto;
	margin-bottom: 24px;
	padding: 8px;
	border: 2px solid darkblue;
	box-shadow: #898989 2px 2px 2px 2px;
	border-radius: 6px;
	-webkit-border-radius: 6px;
}

.pick-content {
	margin-top: 18px;
}

.your-pick-status
{
	text-align: center;
	margin-bottom: 15px;
}

.your-draft-pick
{
	text-align: center;
	margin-bottom: 18px;
}

.pick-glance
{
	width: 260px;
	display: inline-block;
}

.current-pick
{
	font-weight: bold;
}

.navLink 
{
	margin-right: 6px;
}
.draft-glance 
{
    display: table;
    table-layout: fixed;
	text-align: left;
	margin: 0 auto;
	margin-bottom: 18px;
}

.glance-entry
{
    display: table-cell;
}

.view-draft {
	text-align: center;
}

#pickInfo .validation-summary-errors ul {
	padding: 0px;
	text-align: center;
	list-style-type: none;
}

#pickInfo .field-validation-error {
	display: block;
}

.dp-first-name, .dp-last-name {
	width: 205px;
}

/* Pick - Admin Draft Input  
----------------------------------------------------------*/

.admin-draft-info {
	text-align: center;
}

#draftInputForm {
	margin-top: 20px !important;
}


/* Best Available / Player Rankings
----------------------------------------------------------*/
#bestAvailable, #allPlayerRanks
{
	text-align: center;
}

.ba-rankings 
{
	white-space: nowrap;
}

.rank-header, .rlist-header
{
	text-align: center;
	margin-top: 22px;
	margin-bottom: 12px;
}
.rank-name, .rankings-list
{
	font-size: 1.2em;
	font-weight: bold;
	margin-bottom: 12px;
}
.more-rank-opts 
{
	font-size: 0.9em;
}

.ba-category 
{
	display: inline-block;
	margin-right: 6px;
}

.ba-category 
{
	vertical-align: top;
}

.ba-category tbody 
{
	border: 1px solid black;
}

.ba-category th 
{
	border-top: 1px solid black;
	border-bottom: 1px solid black;
}

.ba-category th:first-child, .ba-category td:first-child {
	padding-left:3px;
}

.ba-category tr:first-child {
	background-color: #DFDFDF;
}

.ba-hide-cat-link, .cr-remove-link {
	cursor: pointer;
}

.ba-header:not(.hq-header) {
    margin-bottom: -3px;
}

.ba-hide-cat-text, .bup-hide-text {
	display: inline-block;
	font-weight: normal;
	font-size: 11px;
}

.ba-hide-cat-text {
	vertical-align: middle;
	padding-bottom: 4px;
}

.expand 
{
	text-align: center;
	background-color: #DFDFDF;
}
.ba-draft-team
{
}
.ba-selected
{
	font-size: 0.8em;
	text-decoration: line-through;
	border-width: 2px;
	border-style: solid;
	background-color: #DFDFDF;
}
.pr-toggle-links, .pr-highlight-links {
	margin-top: 10px;
}
.pr-toggle-links {
	font-size: 10px;
}
.ba-bye-week {
	font-size: 10px;
}

.ba-category th:last-child, .ba-category td:last-child {
	padding-right: 2px;
}
.ba-table {
	margin: 0 auto;
}
.ba-player-row {
	border-bottom: 1px solid silver;
	border-left: 1px solid black;
	border-right: 1px solid black;
}
/*.ba-player-row:nth-last-child(-n+2) {
	border-bottom: none;
}*/
	/*    -------- Highlighting */

.pr-highlight-section {
	display: inline-block;
	min-height: 399.5px;
	border: 2px solid darkblue;
	border-radius: 6px;
	-webkit-border-radius: 6px;
	margin-right: 8px;
	box-shadow: #898989 2px 2px 2px 2px;
}
.highlight-locked {
	min-height: 362.5px !important;
}
.hq-color-span {
	display: inline-block;
	width: 100%;
	padding-top: 4px;
	padding-bottom: 6px;
	border-bottom: 2px solid darkblue !important;
	border-radius: 4px;
	-webkit-border-radius: 4px;
}
.hq-header-section {
	padding-top: 3px;
}
.hq-header {
	display: inline-block;
	font-size: inherit;
	font-weight: bold;
	padding-top: 2px;
	vertical-align: middle;
	overflow: hidden;
	max-width: 193px;
}
.pr-highlight-section table {
	margin: 0px;
}
.pr-highlight-section td {
	padding-right: 6px;
}
.hq-player-th {
	min-width: 110px;
}
.hq-delete-span, .hq-delete-queue-span {
	display: block;
	font-size: 11px;
	padding-top: 4px;
	padding-bottom: 4px;
	border-top: 1px solid black;
}
.hq-empty-msg, .hq-view-spacer {
	width: 229px;
	white-space: normal;
}
.hq-view-spacer {
	height: 0px;
}
.hq-inner-empty-msg {
	padding: 5px;
}
.hq-copy-text {
	font-size: 13px;
	white-space: normal;
}
.hq-display {
	padding-bottom: 0px;
	margin-bottom: 0px;
}
.queue-table {
	min-width: 228px;
	padding-bottom: 0px;
	margin-bottom: 0px;
}
#btnHQOptions {
	font-size: 12px;
	padding: 2px 5px;
	margin: 4px 5px 6px 5px
}
#txtChangeQueueName, #txtNewQueueName {
	width: 195px;
}
#btnChangeQueueName, #btnAddNewQueue {
	margin-top: 12px;
}
.hq-current-dhs {
	padding: 5px 1px;
	width: min-content;
	margin: 0 auto;
}

/*    -------- Compare Ranks */
.cr-add-compare {
	padding-top: 30px;
	text-align: center;
	white-space: normal;
	cursor: initial !important;
}
.cr-add-rank-content, .cr-add-rank-content div {
	margin: 0 auto;
}
.cr-add-rank-msg {
	width: 232px;
}
.cr-add-rank-text {
	cursor: pointer;
}
.cr-add-rank-text, .cr-show-avg {
	margin-right: 5px;
	margin-left: 5px;
}
.cr-add-rank img {
	vertical-align: bottom;
}
.cr-lbl-show-avg {
	display: inline;
	font-size: 14px;
	font-weight: normal;
}
.cr-chk-show-avg {
	vertical-align: middle;
}
.cr-avg-ranks {
	margin-top: 20px;
}


/* RankingsList / Setup Rank
----------------------------------------------------------*/
.note-text 
{
	font-size: 11px;
}
.sr-ranking-hdr {
	font-size: 16px;
	font-weight: bold;
	margin-top: -2px;
}
.rank-paste-section {
	height: 80px;
}
.rank-paste-new {
	line-height: 35px;
	font-size: 13px;
}
#setupRank 
{
	text-align: center;
}
.rlist-entries
{
	margin-top: 12px;
}
.personal-rank-name
{
	font-size: 1.0em;
	margin-top: 2px;
	margin-bottom: 12px;
}
.personal-rank-name input
{
	font-size: 1.0em;
	width: 255px;
}
.rname-input-div 
{
	display: inline;
}
.sr-outer-section
{
	display: inline-block;
	margin: 12px 0px 12px 0px;
}
.sr-new-player {
	margin: 2px 0px 4px 0px;
}
.rank-setup-section, .rank-avail-section
{
	display: inline-block;
	vertical-align: top;
}
/* ... */

